manifests/base/resources/eventing/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"
  labels:
    app: eventing
    chart: eventing-1.3.1
    heritage: Helm
    release: eventing
  name: eventing
spec:
  ports:
  - name: eventing
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: eventing
    release: eventing
  type: ClusterIP
---
