manifests/base/resources/eventing/resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: Authorization
    nginx.ingress.kubernetes.io/auth-url: http://eventing-edge-auth.$(NAMESPACE).svc.cluster.local:8080/v1/auth
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite (?i)/api/(.*) /$1 break;
  labels:
    app: eventing
    chart: eventing-1.3.1
    heritage: Helm
    release: eventing
  name: eventing
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: eventing
          servicePort: 8080
        path: /api/v1/events
---
